# OS_ChatSystems_Project

./: OS_ChatSystems_Project.slnx  README.md
ChatSystem_SharedMemory/: ChatSystem_SharedMemory.cpp  ChatSystem_SharedMemory.vcxproj  ChatSystem_SharedMemory.vcxproj.filters
ChatSystem_Sockets/: CMakeLists.txt  ChatSystem_Sockets.cpp  ChatSystem_Sockets.files  ChatSystem_Sockets.vcxproj  ChatSystem_Sockets.vcxproj.filters  chatmessage.cpp  chatmessage.h  client.cpp  client.h  gui.cpp  gui.h  main.cpp  moc_client.cpp  moc_gui.cpp  moc_server.cpp  protocol.h  server.cpp  server.h  threadmanager.cpp  threadmanager.h
ChatSystem_Sockets/.qtc_clangd/: compile_commands.json
OS_ChatSystems_Project/: OS_ChatSystems_Project.cpp  OS_ChatSystems_Project.vcxproj  OS_ChatSystems_Project.vcxproj.filters
